Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
       - Fixed issue in JettyHandler mixing HTTP and HTTPS requests.
         Reported by Albert Boehmler.
       - When updating a file via the FILE connector, some deletion
         issue could occur on Windows due to JVM integration issues
         with the OS. A workaround to reduce this was to invoke the
         garbage collection. Reported by Kevin Conaway.  
    - Misc
    
- 1.1.3 (2009-02-26)
    - Bugs fixed
       - Fixed Regex issue in Template with fixed variables. 
         Contributed by Bruno Dumon.
       - Fixed bug in ReadableRepresentation preventing channel from
         closing. Reported by Janne Husberg.
       - Fixed bug with jSSLutils integration. Reported by Dan Noble 
         and fixed by Bruno Harbulot.
       - Handler is now capable of discovering allowed methods, even
         in protected Handler subclasses. Reported by Leigh Klotz.
       - Fixed the inclusion test of media types when one contains a 
         "*+".
       - Fixed wrong computed "content-length" header when encoding 
         representations using the Encoder. Reported by Tamas 
         Cservenak.
       - Fixed wrong computed "content-location" header generated by 
         the DirectoryResource. Reported by David Fogel.
       - Fixed potential bug with EncodeRepresentation when only 
         Identity applies.
    - Misc
         - Upgraded JAXB to version 2.1.9.
         - Upgraded Grizzly to version 1.9.5.

- 1.1.2 (2009-01-23)
    - Bugs fixed
        - org.restlet.util.Engine#getClassLoader() didn't return
          the system classloader when all other were null. Fixed by
          Rob Heittman.
        - Fixed bug when JsonRepresentation are instantiated with a 
          JSONArray object. Reported by Adrian Nadeau.
        - Fixed bug that occurs when a request with a query part is 
          sent to a Directory Restlet.